Fix the broken UI problem (use Bootstrap instead of Polymer).

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -4,98 +4,95 @@
 
 body {
   font-family: Helvetica, Arial, sans-serif;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   line-height: 16px;
 }
 
+.container-fluid {
+  padding: 0;
+}
+
 .list {
-  position: relative;
+  position: absolute;
   width: 230px;
-  height: 447px;
-  margin-right: 20px;
-  float: left;
+  top: 0;
+  bottom: 0;
   background-color: #eee;
 }
 
-.container {
-  margin: 0 auto;
-  padding: 0 10px 10px 10px;
-  width: 550px;
-  float: left;
-  /* background-color: red; */
+#credentials {
+  position: absolute;
+  top: 0;
+  bottom: 49px;
+  width: 100%;
+  padding: 10px 10px 0 10px;
+  overflow-y: auto;
+  z-index: 2;
 }
 
-h2 {
+.credential {
+  display: inline-block;
+  width: 100%;
+  font-size: 18px;
   margin-bottom: 10px;
 }
 
-paper-input {
-  display: block;
-  font-size: 16px;
-  padding: 0;
-  width: 500px;
-}
-
-paper-input-decorator {
-  display: block;
-  font-size: 16px;
-  padding: 15px auto 0 auto;
-  width: 500px;
-}
-
-paper-radio-button {
-  font-size: 16px;
-}
-
-paper-button {
-  display: block;
-  margin: 20px auto 0 auto;
-  width: 100px;
-  font-size: 16px;
-}
-
-#btnMount {
-  color: #fff;
-  background-color: #4285f4;
-}
-
-paper-item {
+.credential-info {
+  width: 180px;
   word-wrap: break-word;
+  cursor: pointer;
 }
 
-core-menu {
-  margin: 0;
-  overflow-y: auto;
+.btn-credential-remove {
+  cursor: pointer;
 }
 
-#selectSharedResourceDialog {
-  width: 500px;
-  height: 300px;
-}
-
-core-toolbar {
+.toolbar {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
   background-color: #2298f2;
+  z-index: 2;
 }
 
-core-toolbar paper-icon-button {
+.toolbar div {
   color: white;
+  font-size: 32px;
+  margin-top: 5px;
+  margin-left: 10px;
+  cursor: pointer;
 }
 
-#settingsDialog {
-  width: 550px;
+.main {
+  position: absolute;
+  left: 230px;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 
-#settingsDialog paper-dropdown-menu {
-  margin-top: 0;
-  margin-left: 15px;
+.main form {
+  margin: 10px 10px 0 10px;
+}
+
+div.header {
+  margin-top: 5px;
 }
 
 #logo {
   width: 48px;
   height: 48px;
-  margin-right: 10px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+.buttons {
+  margin-top: 30px;
 }
 
 img.season {
@@ -104,6 +101,3 @@ img.season {
   height: 24px;
 }
 
-div.header {
-  margin-top: 5px;
-}
